crates/as2/src/parser/snapshots/ruasc_as2__parser__tests__all_samples@numbers.as.snap
---
source: crates/as2/src/parser/tests.rs
expression: parsed
input_file: samples/numbers.as
---
Ok:
  statements:
    - Declare:
        - name: i0
          value:
            Constant:
              Integer: 0
    - Declare:
        - name: i1
          value:
            Constant:
              Integer: 1
    - Declare:
        - name: i42
          value:
            Constant:
              Integer: 42
    - Declare:
        - name: iLarge
          value:
            Constant:
              Integer: 2147483647
    - Declare:
        - name: iLargePlusOne
          value:
            Constant:
              Float: 2147483648
    - Declare:
        - name: f0
          value:
            Constant:
              Float: 0
    - Declare:
        - name: f1
          value:
            Constant:
              Float: 1.23
    - Declare:
        - name: fLeadingDot
          value:
            Constant:
              Float: 0.5
    - Declare:
        - name: fTrailingDot
          value:
            Constant:
              Float: 5
    - Declare:
        - name: h0
          value:
            Constant:
              Integer: 0
    - Declare:
        - name: hMix
          value:
            Constant:
              Integer: 6699
    - Declare:
        - name: hMaxByte
          value:
            Constant:
              Integer: 255
    - Declare:
        - name: eBig
          value:
            Constant:
              Float: 10000000000
    - Declare:
        - name: eSmall
          value:
            Constant:
              Float: 0.0000000001
    - Declare:
        - name: ePlus
          value:
            Constant:
              Float: 2500
    - Declare:
        - name: eLeadingDot
          value:
            Constant:
              Float: 50
    - Declare:
        - name: eTrailingDot
          value:
            Constant:
              Float: 5000
    - Declare:
        - name: eSci
          value:
            Constant:
              Float: 602200000000000000000000
    - Declare:
        - name: nDec
          value:
            UnaryOperator:
              - Sub
              - Constant:
                  Integer: 123
    - Declare:
        - name: nHex
          value:
            UnaryOperator:
              - Sub
              - Constant:
                  Integer: 255
    - Declare:
        - name: nFloat
          value:
            UnaryOperator:
              - Sub
              - Constant:
                  Float: 3.14
    - Declare:
        - name: pDec
          value:
            Constant:
              Integer: 7
    - Declare:
        - name: sum
          value:
            BinaryOperator:
              - Add
              - BinaryOperator:
                  - Add
                  - Constant:
                      Integer: 1
                  - Constant:
                      Integer: 2
              - Constant:
                  Integer: 3
    - Declare:
        - name: diff
          value:
            BinaryOperator:
              - Sub
              - Constant:
                  Integer: 10
              - Constant:
                  Integer: 4
    - Declare:
        - name: prod
          value:
            BinaryOperator:
              - Multiply
              - Constant:
                  Integer: 6
              - Constant:
                  Integer: 7
    - Declare:
        - name: quot
          value:
            BinaryOperator:
              - Divide
              - Constant:
                  Integer: 22
              - Constant:
                  Integer: 7
    - Declare:
        - name: combo
          value:
            BinaryOperator:
              - Sub
              - BinaryOperator:
                  - Multiply
                  - Parenthesis:
                      BinaryOperator:
                        - Add
                        - Constant:
                            Integer: 16
                        - Constant:
                            Integer: 15
                  - Constant:
                      Float: 25
              - Constant:
                  Float: 0.75
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "i0 = "
                - Constant:
                    Identifier: i0
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "i1 = "
                - Constant:
                    Identifier: i1
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "i42 = "
                - Constant:
                    Identifier: i42
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "iLarge = "
                - Constant:
                    Identifier: iLarge
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "iLargePlusOne = "
                - Constant:
                    Identifier: iLargePlusOne
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "f0 = "
                - Constant:
                    Identifier: f0
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "f1 = "
                - Constant:
                    Identifier: f1
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "fLeadingDot = "
                - Constant:
                    Identifier: fLeadingDot
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "fTrailingDot = "
                - Constant:
                    Identifier: fTrailingDot
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "h0 = "
                - Constant:
                    Identifier: h0
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "hMix = "
                - Constant:
                    Identifier: hMix
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "hMaxByte = "
                - Constant:
                    Identifier: hMaxByte
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "eBig = "
                - Constant:
                    Identifier: eBig
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "eSmall = "
                - Constant:
                    Identifier: eSmall
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "ePlus = "
                - Constant:
                    Identifier: ePlus
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "eLeadingDot = "
                - Constant:
                    Identifier: eLeadingDot
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "eTrailingDot = "
                - Constant:
                    Identifier: eTrailingDot
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "eSci = "
                - Constant:
                    Identifier: eSci
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "nDec = "
                - Constant:
                    Identifier: nDec
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "nHex = "
                - Constant:
                    Identifier: nHex
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "nFloat = "
                - Constant:
                    Identifier: nFloat
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "pDec = "
                - Constant:
                    Identifier: pDec
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "sum = "
                - Constant:
                    Identifier: sum
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "diff = "
                - Constant:
                    Identifier: diff
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "prod = "
                - Constant:
                    Identifier: prod
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "quot = "
                - Constant:
                    Identifier: quot
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - BinaryOperator:
                - Add
                - Constant:
                    String: "combo = "
                - Constant:
                    Identifier: combo
