crates/as2/src/parser/snapshots/ruasc_as2__parser__tests__all_samples@trace_hello_world.as.snap
---
source: crates/as2/src/parser/tests.rs
expression: parsed
input_file: samples/trace_hello_world.as
---
Ok:
  statements:
    - Expr:
        Call:
          name:
            Constant:
              Identifier: trace
          args:
            - Constant:
                String: Hello World
